feat : 투표하기 API 응답, 예외 처리 테스트 코드 작성
[SCRUM-35]